# quartofmt

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  TODO.md  Taskfile.yml  devenv.nix
.github/: copilot-instructions.md
.github/workflows/: build-and-test.yml  docs.yml  release.yml
crates/quartofmt-wasm/: Cargo.toml
crates/quartofmt-wasm/src/: lib.rs
docs/: .gitignore  _quarto.yml  index.qmd  pandoc-spec.md
docs/pandoc-spec/: backslash-escapes.md  block-quotations.md  citation-syntax.md  divs-and-spans.md  footnotes.md  headings.md  horizontal-rules.md  images.md  inline-formatting.md  latex-macros.md  line-blocks.md  links.md  lists.md  math.md  metadata-blocks.md  non-default-extensions.md  paragraphs.md  philosophy.md  raw-html.md  tables.md  verbatim-code-blocks.md
docs/playground/: index.html
docs/playground/pkg/: package.json  quartofmt_wasm.d.ts  quartofmt_wasm.js  quartofmt_wasm_bg.wasm  quartofmt_wasm_bg.wasm.d.ts
src/: block_parser.rs  config.rs  formatter.rs  inline_parser.rs  lexer.rs  lib.rs  main.rs  parser.rs  syntax.rs
src/block_parser/: tests.rs
src/block_parser/tests/: blanklines.rs  blockquotes.rs  code_blocks.rs  headings.rs  helpers.rs
src/inline_parser/: tests.rs
src/lexer/: tests.rs
src/parser/: tests.rs
tests/: format_cases.rs  golden_cases.rs
tests/cases/block_quotes/: expected.qmd  input.qmd
tests/cases/code_cells/: expected.qmd  (+1 more)
tests/format/: code_cells.rs  comments.rs  divs.rs  frontmatter.rs  headings.rs  links.rs  lists_ordered.rs  lists_unordered.rs  main.rs  math.rs  paragraphs.rs  preserve_wrap.rs  quotes.rs  tables_simple.rs  tex.rs
(+20 files in other folders)
