[package]
name = "quartofmt"
version = "0.1.0"
edition = "2024"
description = "A formatter for Quarto documents"
license = "MIT"
repository = "https://github.com/jolars/quartofmt"
homepage = "https://github.com/jolars/quartofmt"
keywords = ["quarto", "pandoc", "markdown", "formatter"]
categories = ["command-line-utilities", "text-processing"]

[workspace]
members = ["crates/quartofmt-wasm"]

[[bin]]
name = "quartofmt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
env_logger = "0.11.8"
regex = "1.11.2"
rowan = "0.16.1"
serde = { version = "1.0.224", features = ["derive"] }
textwrap = "0.16.2"
toml = "0.9.5"

[dependencies.log]
version = "0.4.28"
features = ["release_max_level_info"] # disables debug/trace in release

[dev-dependencies]
similar-asserts = "1.7.0"
diff = "0.1.13"
